# nexus-conversations

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  gunicorn-logging.conf  gunicorn.conf.py  manage.py  pyproject.toml  schema.yaml
.github/workflows/: build-conversations-push-tag-shared.yaml
conversation_ms/: README.md  apps.py  authentication.py  events.py  exceptions.py  filters.py  main.py  models.py  serializers.py  tasks.py  views.py
conversation_ms/adapters/: __init__.py  aws.py  conversation.py  data_lake.py  dynamo.py  entities.py  router_service.py
conversation_ms/clients/: __init__.py  billing.py  dtos.py
conversation_ms/consumers/: sqs_consumer.py
conversation_ms/migrations/: 0001_initial.py  0002_topic_subtopic_conversationclassification.py
conversation_ms/repositories/: conversation_repository.py  message_repository.py
conversation_ms/services/: __init__.py  classification_service.py  conversation_service.py  conversation_window_service.py  csat_nps_service.py  message_migration_service.py  message_service.py  resolution_counter.py
conversation_ms/tests/: __init__.py  factories.py  test_adapters.py  test_api.py  test_aws_adapters.py  test_classification_service.py  test_consumer_routing.py  test_conversation_window_service.py  test_data_lake_task.py  test_entities.py  test_events.py  test_models.py  test_repositories.py  test_resolution_counter.py  test_services.py
nexus_conversations/: asgi.py  celery.py  environment.py  settings.py  urls.py  wsgi.py
nexus_conversations/sentry/: apps.py  filters.py
